--- a/Lamp/css/style.css
+++ b/Lamp/css/style.css
@@ -38,3 +38,13 @@ textarea.red
     border: 1px solid red;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+-moz-appearance: textfield;
+}
