--- a/Lamp/css/style.css
+++ b/Lamp/css/style.css
@@ -57,3 +57,17 @@ margin: 0;
 input[type=number] {
 -moz-appearance: textfield;
 }
+
+table, td, th {  
+    border: 1px solid #ddd;
+    text-align: left;
+  }
+  
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    padding: 15px;
+  }
