--- a/Lamp/css/style.css
+++ b/Lamp/css/style.css
@@ -17,6 +17,17 @@
     margin: auto;
 }
 
+.cost {
+    font-weight: bold;
+    font-size: 1.5em;
+    margin: 0.2em;
+    padding: 0;
+    height: fit-content;
+    text-align: right;
+    border:none;
+}
+
+
 /*********************/
 /* H TAGS 
 /*********************/
@@ -26,7 +37,7 @@ h1 {
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 33px;
 }
 
 h3 {
@@ -66,6 +77,8 @@ header a {
 
 #nav {
     grid-column-start: 2;
+    margin-left:-2em;
+    
 }
 
 .faq_link {
@@ -336,10 +349,16 @@ button,
 /*********************************/
 /*  CALCULATOR
 /********************************/
+/*********************************/
+/*  FORM
+/********************************/
+#calculator {
+    margin-top: 5em;
+}
 #calc_form{
     border-right: 1px solid grey;
     padding-right: 100px;
-    width: 60%;
+    width: 60%
 }
 #calc_form label.weight {
     min-width:6em;
@@ -348,23 +367,51 @@ button,
 
 .ambulance_note {
     padding-top: 1em;
-    padding-bottom:3em;
+    margin-bottom:5em;
     font-weight:bold;
     font-size: 0.8em;
 }
 
 #form_links {
     justify-content: space-between;
-    margin-bottom: 2em;
+    margin-top: 1em;
 }
+#lookup_button {
+    width: 150px;
+    margin-left: 20px;
+}
+
 #calc_form #error_list {
     text-align: right;
 }
+
+/*********************************/
+/*  COSTS
+/********************************/
 
 #calc_costs {
     width: 40%;
     margin-left: 10%;
 }
+
+#approve_button {
+    background-color: red;
+    width: 200px;
+    margin-bottom: 2em;
+    text-align: center;
+
+}
+
+form#start_order {
+    justify-content: center;
+    align-items: center;
+}
+
+form#start p {
+    color: grey;
+}
+
+
 
 /*********************************/
 /*  FAQS
@@ -394,6 +441,18 @@ button,
 #questions {
     width: 50%;
 }
+
+#questions h3 {
+    margin-bottom: 20px;
+}
+
+
+#questions hr {
+    border-top: 7px solid var(--bgreen);
+    background-color: var(--bgreen);
+    width: 200px;
+}
+
 
 
 #answer_box {
@@ -428,44 +487,176 @@ button,
 }
 
 
-#questions h3 {
-    margin-bottom: 20px;
+
+/*********************************/
+/*  ORDER FORM
+/********************************/
+
+#order_form h1 {
+    color: var(--purple);
+    font-size: 2em;
+    margin-bottom: 0.5em;
 }
 
-#questions {
-    width: 50%;
+#order_form h3 {
+    font-size: 1.7em;
+    margin-bottom: 1em;
 }
-
-
-#questions hr {
-    border-top: 7px solid var(--bgreen);
-    background-color: var(--bgreen);
-    width: 200px;
-}
-
-
-
-
-
-
-
-
-
-
-
 
 
 #order_form #error_list{
     height: 5em;
 }
+
+
+#order_form input[type='checkbox'],
+#order_form input[type='radio']
+{
+    height: 1.2em;
+    width: 6em;
+}
+form#submit {
+    margin-top: 3em;
+}
+
+#left_col {
+    justify-content: space-around;
+    width: 40%;
+}
+#order_form .button {
+    margin-top: 5em;
+}
+
+fieldset div {
+    display:flex;
+    align-items: center;
+    margin-top: 0.5em;
+}
+
+fieldset div label {
+    display:inline-block;
+    width: 13em;
+    min-width: 5em;
+}
+#order_form #error_list {
+    height: fit-content;
+}
+/*********************************/
+/*  HOSPITAL INFORMATION
+/********************************/
+
+/*********************************/
+/*  ORDER COSTS
+/********************************/
+
+#order_form .approved {
+    text-align: right;
+    width:10em;
+}
+
+#order_form .cost {
+    border: none;
+    min-width: 1.5em;
+    font-size: 1.2em;
+    width:25%;
+}
+
+#order_form #total_cost.red {
+    color:red;
+}
+
+
+/*********************************/
+/*  PET INFO
+/********************************/
+input.age {
+    width:50%;
+}
+
+select.age_type {
+    width:50%;
+}
+#order_form .weight {
+    margin-right:15px;
+}
+/*********************************/
+/*  PET HISTORY
+/********************************/
+#order_form label.radio {
+    min-width: 0;
+    width: 3em;
+}
+#summary_section {
+    margin-top: 2em;
+    width:100%;
+    font-weight: bold;
+}
+
+#summary_section #summary_label {
+    font-size: 13px;
+}
+
+#order_form textarea {
+    width: 100%;
+    height: 400px;
+    overflow-y: auto;
+    margin-top: 1.5em;
+}
+
+#death_date {
+    margin-top: 1.5em;
+}
+
+label.summary {
+    display:block;
+    width:100%;
+}
+
+input.death_date {
+    width: 17em;
+}
+label.death_date {
+    width:15em;
+}
+
+
+
+
+
+
+
+
+
+
+
+#pet_section {
+    width: 40%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*********************************/
+/*  SUCCESS
+/********************************/
 #thanks {
     margin-bottom: 2em;
 }
 
-.estimate.wrapper {
+/* .estimate.wrapper {
     margin: 100px auto;
     
-}
+} */
 #success button {
     margin-bottom: 2em;
 }
@@ -495,97 +686,18 @@ button,
 #pet_hist{
     width: 65%;
 }
-#order_form input[type='checkbox'],
-#order_form input[type='radio']
-{
-    height: 1em;
-    width: 6em;
-}
 
-#order_form .approve {
-    text-align: right;
-    width:1em;
-}
 
-#order_form .cost {
-    border: none;
-    min-width: 1.5em;
-}
-input.age {
-    width:50%;
-}
-/* input.weight {
-    width:90%;
-    margin-right: 10px;
-} */
-select.age_type {
-    width:50%;
-}
-#order_form h1 {
-    margin-bottom: 0.5em;
-}
 
-#submit {
-    margin-top: 1.5em;
-}
 
-#order_form label.radio {
-   min-width: 0;
-    width: 3em;
-}
 
-input.death_date {
-    width: 17em;
-}
-label.death_date {
-    width:15em;
-}
 
-fieldset div {
-    display:flex;
-    align-items: center;
-    margin-top: 0.5em;
-}
-#death_date {
-    margin-top: 1.5em;
-}
-fieldset div label {
-    display:inline-block;
-    width: 13em;
-    min-width: 5em;
-}
+
+
 .radio_label {
     min-width: 15em;
 }
-#order_form h3 {
-    font-size: 1.7em;
-    margin-bottom: 1em;
-}
-#left_col {
-    justify-content: space-around;
-    width: 40%;
-}
-#h_summary {
-    margin-top: 2em;
-    width:100%;
-}
 
-#pet_section {
-    width: 40%;
-}
-#order_form textarea {
-    width: 100%;
-    height: 400px;
-    overflow-y: auto;
-    margin-top: 1.5em;
-}
-label.summary {
-    display:block;
-    width:100%;
-}
-#order_form .button {
-    margin-top: 5em;
-}
 #history,
 #costs {
     margin-top: 3em;
@@ -609,15 +721,6 @@ label.summary {
 
 
 
-
-
-
-.bgreen a {
-    color: var(--bgreen);
-}
-
-
-
 .estimate h3 {
     font-weight: lighter;
     margin-bottom: 1em;
@@ -625,14 +728,6 @@ label.summary {
 }
 
 
-.cost {
-    font-weight: bold;
-    font-size: 1.5em;
-    margin: 0.2em;
-    padding: 0;
-    height: fit-content;
-    text-align: right;
-}
 
 
 form div{
@@ -648,24 +743,9 @@ form div{
 }
 
 
-.no_border {
-    border:none;
-}
 
 
 
-#lookup_button {
-    width: 150px;
-    margin-left: 20px;
-}
-
-
-#approve_button {
-    background-color: red;
-    width: 200px;
-    margin-bottom: 2em;
-
-}
 #order_form label {
     font-size: 15px;
 }
@@ -675,24 +755,12 @@ form div{
     margin-left: 100px;
     cursor: context-menu;
 }
-.approve_form {
-    justify-content: center;
-    align-items: center;
-}
 
-.approve_form p {
-    color: grey;
-}
-
-
-#form_content {
+/* #form_content {
     width: 100%;
 }
+ */
 
-#order_form h1 {
-    color: var(--purple);
-    font-size: 2em;
-}
 
 
 /* Spinner */
