--- a/Lamp/css/style.css
+++ b/Lamp/css/style.css
@@ -43,7 +43,7 @@ h2 {
 }
 
 h3 {
-    font-size: 30px;
+    font-size: 50px;
 }
 
 
@@ -146,7 +146,7 @@ th, td {
 /*********************/
 ul li {
     list-style: none;
-    margin-left: 100px;
+    margin-left: 60px;
     margin-top: 13px;
     color: white;
     font-weight: bold;
@@ -174,7 +174,7 @@ ol li {
 /* GENERIC TAGS 
 /*********************/
 select {
-    width: 100%;
+    width: 75px;
     height: 2.5em;
 }
 input {
@@ -299,7 +299,9 @@ button,
     width: 100%;
     height: 50%;
 }
-
+.faqImg {
+    margin-top:-20px;
+}
 
 
 /*********************/
@@ -317,7 +319,7 @@ button,
 .blue_bar p {
     color: white;
     font-size: 20px;
-    width:700px;
+    width:90%;
     line-height: 2em;
 }
 
@@ -352,13 +354,6 @@ button,
 /*********************************/
 /*  MAIN PAGE (ESTIMATE_VIEWER)
 /********************************/
-
-.title {
-    position: absolute;
-    top: 300px;
-    left: 15%;
-    line-height: 3.3em;
-}
 
 
 /*********************************/
@@ -411,7 +406,7 @@ button,
 }
 
 #clear_form {
-    margin-left: 100px;
+    /* margin-left: 100px; */
     cursor: context-menu;
 }
 
@@ -438,9 +433,12 @@ form#start_order {
     align-items: center;
 }
 
-form#start p {
+form  p.optional {
     color: grey;
+    text-align: center;
 }
+
+
 
 
 
@@ -453,14 +451,17 @@ form#start p {
     padding-top: 50px;
 }
 
+.title,
 .faq {
     position: relative;
-    top: 300px;
+    top: 25px;
     left: 0%;
     line-height: 3.3em;
     color: white;
-    height: 50px;
+    height: 0px;
 }
+
+
 .faq h1 {
     color: white;
 }
@@ -473,6 +474,7 @@ form#start p {
 
 #questions {
     width: 50%;
+    padding-right: 100px;
 }
 
 #questions h3 {
