--- a/Lamp/css/style.css
+++ b/Lamp/css/style.css
@@ -71,10 +71,9 @@ header a {
     color: white;
 }
 
-#logo{
-    width: 176px;
-    margin-top:20px;
-    margin-bottom: 20px;
+#logo {
+    width: 199px;
+    margin-top: 20px;
 }
 
 #nav {
@@ -297,7 +296,7 @@ button,
 .jumbo {
     object-fit: cover;
     width: 100%;
-    height: 50%;
+    min-height:400px;
 }
 .faqImg {
     margin-top:-20px;
@@ -409,7 +408,9 @@ button,
     /* margin-left: 100px; */
     cursor: context-menu;
 }
-
+.antech_input {
+    width: 100%;
+}
 
 /*********************************/
 /*  COSTS
@@ -436,12 +437,43 @@ form#start_order {
 form  p.optional {
     color: grey;
     text-align: center;
+    font-size: 0.7em;
 }
 
+#print_button {
+    color: var(--purple);
+    background-color: transparent;
+    margin-bottom: 20px;
+}
 
+/*********************************/
+/*  PRINT
+/********************************/
+#print .left {
+    width: 100%;
+    border:none;
+}
+#print .right {
+    margin-left: 0px;
+    width: 100%;
+}
 
-
-
+#print input {
+    border:none;
+}
+#print a {
+    color: var(--purple)
+}
+#print .links {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+#print .links p {
+    color: var(--purple);
+    margin-left: 5px;
+}
 /*********************************/
 /*  FAQS
 /********************************/
@@ -454,7 +486,7 @@ form  p.optional {
 .title,
 .faq {
     position: relative;
-    top: 25px;
+    top: 100px;
     left: 0%;
     line-height: 3.3em;
     color: white;
@@ -604,6 +636,9 @@ form#submit {
 /*  ORDER COSTS
 /********************************/
 
+.ocosts {
+    font-size:30px;
+}
 #order_form .approved {
     text-align: right;
     width:10em;
@@ -624,6 +659,10 @@ form#submit {
 /*********************************/
 /*  PET INFO
 /********************************/
+#pet_section #species,
+#pet_section #sex {
+    width: 100%;
+}
 input.age {
     width:50%;
 }
@@ -638,7 +677,6 @@ select.age_type {
 #pet_section {
     margin-left: 7em;
 }
-
 /*********************************/
 /*  PET HISTORY
 /********************************/
@@ -784,4 +822,68 @@ input[type=number] {
 
 #spinner.show {
     visibility: visible;
+}
+
+
+@media screen and (max-width: 1000px) {
+  #calculator {
+      flex-direction: column;
+  }
+
+  #calculator .left,
+  #calculator .right{
+      width:100%;
+      margin-left: 0px;
+      border:none;
+  }
+    #faq_blue .flex3 {
+        flex-direction: column;
+    }
+    #faq_blue #questions,
+    #faq_blue #answer_box {
+        width: 100%
+    }
+
+    #submit {
+        display:flex;
+        flex-direction: column-reverse;
+    }
+
+    #submit #left_col,
+    #submit #pet_section,
+    #submit #costs{
+        width:90%;
+        margin: 0px;
+        margin:auto;
+        margin-top: 3em;
+    }
+    footer {
+        width: 80%;
+    }
+    header{
+        grid-template-columns:  unset;
+    }
+    #nav {
+        margin:0;
+        margin:auto;
+        width: 80%;
+        grid-column-start: unset;
+    }
+
+    #euthanized,
+    #frozen,
+    #death_date{
+        display:unset;
+    }
+
+
+    input[type=radio],
+    input[type=date] {
+        margin-top: 0.5em;
+        margin-bottom: 2em;
+    }
+
+    .radio_label {
+        width: 100%;
+    }
 }
